scrollbar fix

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -4,7 +4,7 @@ $post-yellow: #FFFBD0;
 
 $shadow: 0px 3px 5px #888888;
 
-not(textarea)::webkit-scrollbar {
+:not(textarea)::webkit-scrollbar {
 	display: none;
 }
 
